[project]
name = "highlevel_llm_manipulation_planner"
version = "0.1.0"
authors = [{ name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com" }]
maintainers = [{ name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com" }]
description = "LLM-baased high-level task planner for robotic manipulation tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor",
]